--- a/code1.html
+++ b/code1.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="password-generator">
-            <h1>Password Generator</h1>
+            <h1>Password</h1>
             <p class="description">Create strong, secure passwords with customizable options</p>
             
             <div class="password-display">
