--- a/front.html
+++ b/front.html
@@ -11,7 +11,7 @@
   <div class="front-page">
     <div class="container">
       <header>
-        <h1>Welcome to the Password Generator</h1>
+        <h1>Welcome to The Password Generator</h1>
         <p class="tagline">Create strong, secure, and customizable passwords for all your needs.</p>
       </header>
 
