--- a/front.html
+++ b/front.html
@@ -18,10 +18,10 @@
       <section class="features">
         <h2>Why Choose Our Password Generator?</h2>
         <ul>
-          <li>✔ Generate passwords of any length</li>
-          <li>✔ Include uppercase, lowercase, numbers, and symbols</li>
-          <li>✔ Copy passwords easily to your clipboard</li>
-          <li>✔ Completely free and open-source</li>
+          <li>✔ Generate passwords of any length</li>//options
+          <li>✔ Include uppercase, lowercase, numbers, and symbols</li>//options
+          <li>✔ Copy passwords easily to your clipboard</li>//options
+          <li>✔ Completely free and open-source</li>//options
         </ul>
       </section>
 
