--- a/code1.html
+++ b/code1.html
@@ -32,7 +32,7 @@
       <div id="toast" class="toast">Copied!</div>
     </div>
   </div>
-  <script src="p.js"></script>
+  <script src="pass.js"></script>
 </body>
 </html>
 
