changed some features

--- a/front.html
+++ b/front.html
@@ -27,7 +27,7 @@
 
       <section class="cta">
         <h2>Start Generating Your Password</h2>
-        <a href="p.html" class="cta-btn">Generate Password Now</a>
+        <a href="code1.html" class="cta-btn">Generate Password Now</a>
       </section>
 
       <footer>
