--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="about-container">
-      <h1>About This Password Generator</h1>
+      <h1>About The Password Generator</h1>
 
 
       <p>This Password Generator tool helps users create strong, secure, and unique passwords. 
