--- a/code1.html
+++ b/code1.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="password-generator">
       <h1>Password Generator</h1>
-      <p class="description">Generate strong, secure passwords with customizable options.</p>
+      <p class="description">Generate strong, secure and unbreakable passwords with customizable options.</p>
       <div class="password-display">
         <span id="password">Your password will appear here</span>
         <button id="copy-btn">📋</button>
