--- a/front.html
+++ b/front.html
@@ -31,7 +31,7 @@
       </section>
 
       <footer>
-        <p>&copy; 2025 Password Generator Project. All rights reserved.</p>
+        <p>&copy; Password Generator Project. All rights reserved.</p>
         <nav class="footer-nav">
           <a href="about.html">About</a> | <a href="contact.html">Contact</a>
         </nav>
